# os_on_rust

./: .gitignore  Cargo.toml  README.md  rust-toochain
.cargo/: config
src/: lib.rs  main.rs
src/gdt/: mod.rs
src/interrupts/: mod.rs  pics.rs
src/vga_buffer/: mod.rs
